# giaw

./: Cargo.toml  README.md  justfile
src/: main.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/client/src/engine/: scene.rs
src/client/src/game/: entry.rs  mod.rs
src/client/src/game/actors/: inventory.rs  player.rs
src/client/src/game/services/: camera.rs  mod.rs  render.rs  rpc.rs
src/game/: entry.rs
src/game/actors/: player.rs
src/game/services/: actors.rs  collider.rs  mod.rs  transform.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/net/: mod.rs  rpc.rs  session.rs  transport.rs
src/shared/: Cargo.toml
src/shared/src/game/actors/: inventory.rs  player.rs
src/shared/src/game/services/: actors.rs  collider.rs  kinematic.rs  mod.rs  replication.rs  rpc.rs  tile.rs  transform.rs
src/shared/src/util/: mod.rs
src/shared/src/util/game/: kinematic.rs  rpc.rs  tile.rs
src/shared/src/util/lang/: drop_step.rs  entity.rs  mod.rs  obj.rs  vec.rs
src/shared/src/util/math/: aabb.rs  glam.rs  mod.rs  scalar.rs
src/util/lang/: delegate.rs  entity.rs  format.rs  obj.rs
src/util/math/: mod.rs
