[workspace]
members = ["src/client", "src/server", "src/shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
aunty = { git = "https://github.com/Radbuglet/aunty.git", rev = "826846ed76f86c4d73cc98b748afda1355b96739" }
bytes = { version = "1.5.0", features = ["serde"] }
glam = "0.21.3"
rustc-hash = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
smallvec = "1.11.2"
