[workspace]
members = ["src/client", "src/server", "src/shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
aunty = { git = "https://github.com/Radbuglet/aunty.git", rev = "1edaba2722e8ed5cd4d565f7b1806b61bd3720bf" }
bytes = { version = "1.5.0", features = ["serde"] }
glam = "0.21.3"
rustc-hash = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
smallvec = "1.11.2"
