[package]
name = "giaw-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
aunty = { git = "https://github.com/Radbuglet/aunty.git", rev = "826846ed76f86c4d73cc98b748afda1355b96739" }
bytes = "1.5.0"
cbit = "0.1.0"
color-backtrace = "0.6.1"
extend = "1.2.0"
giaw-shared = { version = "0.1.0", path = "../shared" }
macroquad = "0.4.4"
quad-net = "0.1.1"
rustc-hash = "1.1.0"
serde = "1.0.195"
