[package]
name = "giaw-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aunty = { workspace = true }
bytes = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

cbit = "0.1.0"
color-backtrace = "0.6.1"
extend = "1.2.0"
giaw-shared = { version = "0.1.0", path = "../shared" }
macroquad = "0.4.4"
quad-net = "0.1.1"
