[package]
name = "giaw-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
giaw-shared = { version = "0.1.0", path = "../shared" }
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
