[package]
name = "giaw-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aunty = { workspace = true }
bytes = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

color-backtrace = "0.6.1"
env_logger = "0.10.1"
futures = "0.3.30"
giaw-shared = { version = "0.1.0", path = "../shared" }
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
