[package]
name = "giaw-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aunty = { workspace = true }
bytes = { workspace = true }
glam = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }

bincode = "1.3.3"
cbit = "0.1.0"
derive-where = "1.2.7"
enum-map = "2.7.3"
extend = "1.2.0"
bitflags = "2.4.1"
